--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -14,9 +14,11 @@
 //** xref:image2-forestry-assessment.adoc[]
 //** xref:image2-admin-note.adoc[]
 * xref:image3-overview.adoc[] 
-** xref:image3-header.adoc[]
-** xref:images3-4-report.adoc[]
-** xref:image3-official-reaction.adoc[]
+** xref:image3-full.adoc[]
+** Breadown: Header, Report, Reaction
+*** xref:image3-header.adoc[]
+*** xref:images3-4-report.adoc[]
+*** xref:image3-official-reaction.adoc[]
 * xref:image5-left-page.adoc[]
 * xref:image5-overview.adoc[]
 ** xref:image5-6-main-txt.adoc[]
