--- a/todo.adoc
+++ b/todo.adoc
@@ -1,6 +1,7 @@
 = TODO
 
 * Create separate glossaries for the now separate pages of document 2.
+* Create image3-full.adoc, the complete document 2.
 * Change the CSS for 'page-role' for the "Full Document View"?
 
 == Other Activities
