--- a/modules/1237/pages/image5-overview.adoc
+++ b/modules/1237/pages/image5-overview.adoc
@@ -1,13 +1,6 @@
 = Document 3: No Title Yet
 :page-role: wide
 
-[%header,cols="1a,1a",frame=none,grid=none]
-|===
-^|Column Header Undecided ^|Column Header Undecided
-
-|image::05-left-page.png[role=scale-25,link=self]
-
-|image::05-right-page.png[role=scale-25,link=self]
-|===
+image::05-right-page.png[role=scale-25,link=self]
 
 
