--- a/modules/1237/pages/image5-overview.adoc
+++ b/modules/1237/pages/image5-overview.adoc
@@ -2,7 +2,7 @@
 :page-role: wide
 
 
-[cols="1,1",frame="none",grid="none",options="noheader"]
+[cols="1a,1a",frame="none",grid="none",options="noheader"]
 |===
 |image::05-right-page.png[scale=25,link=self]
 
