--- a/todo.adoc
+++ b/todo.adoc
@@ -2,6 +2,7 @@
 
 * Create separate glossaries for the now separate pages of document 2.
 * Create image3-full.adoc, the complete document 2.
+* Make sure all imnages have drop shadow border.
 * Change the CSS for 'page-role' for the "Full Document View"?
 
 == Other Activities
