--- a/modules/1237/pages/image2-header.adoc
+++ b/modules/1237/pages/image2-header.adoc
@@ -41,7 +41,7 @@ kind of higher-level civil authority—combining:
 ** estate management
 ** guardianship over minors and wards of the state
 ** fiscal oversight
-** and responsibility for legal and property matters not handled by local Aemter.
+** and responsibility for legal and property matters not handled by local offices (Ämter).
 
 == Left Side Text
 
