--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -1,6 +1,11 @@
 = Document 2: Land Assignment Report and Its Offical Response, 1799
 
-image::03-right-page.png[scale=25,title="Land Assignment Report",link=self]
+[cols="1a,1a",options="noheader"]
+|===
+|image::03-right-page.png[scale=25,title="Land Assignment Report",link=self]
+
+|image::04-left-page.png[scale=25,title="Land Assignment Report",link=self]
+|===
 
 == The Land Assignment Report
 
