--- a/modules/1237/pages/image5-6-main-txt.adoc
+++ b/modules/1237/pages/image5-6-main-txt.adoc
@@ -1,7 +1,7 @@
 = Image 5 Right Page and Image 6 Left Page (Under Development)
 :page-role: wide
 
-TODO: Reorganize Document #3. Also add somewhere, here, or another page, the meaning of "pr:" and "preas:" with
+**TODO:** Reorganize Document #3. Also add somewhere, here, or another page, the meaning of "pr:" and "preas:" with
 this explanation:
 
 So the term “praes.” or “pr.” always means “presented”, but the writer and context determine whose perspective that refers to:
