--- a/modules/1237/pages/image5-overview.adoc
+++ b/modules/1237/pages/image5-overview.adoc
@@ -1,4 +1,4 @@
-= Document 3: No Title Yet
+= Document 3: Guardianship Chamber's Reply Concerning Krückeberg Request
 :page-role: wide
 
 Document 3 is the March 11, 1799, response from the Vormundliche Cammer (Guardianship Chamber) to the civil servants in Bückeburg, replying
