--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -1,4 +1,4 @@
-= Document 2: Land Assignment Report and Its Offical Response, 1799
+= Document 2: Land Assignment Report and Its Offical Response (Feb. 27, 1799)
 
 [cols="1a,1a",options="noheader"]
 |===
