--- a/modules/1237/pages/cover.adoc
+++ b/modules/1237/pages/cover.adoc
@@ -1,11 +1,8 @@
 = Case File Cover
 :page-role: wide
 
-This is the cardboard-like folder containg the six documents and document index of the case file concerning:
-
-[quote]
-The plots assigned to Colon (tenant farmer) Krückeberg, No. 10, in Berenbusch,  
-for the enlargement of his yard space and garden.
+This is the cardboard-like folder for the file concerning: *The plots assigned to Colon (tenant farmer) Krückeberg, No. 10, in Berenbusch,  
+for the enlargement of his yard space and garden*.
 
 image::1237-cover.png[link=self]
 
