--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -1,21 +1,9 @@
 = Timeline of Events in the Case File of Colon Krückeberg (No. 10, Berenbusch)
 
-NOTE: This timeline is not yet complete. It needs to be revised.
+== The Actors
 
-Jobst Heinrich Krückeberg had to wait a year and a half for appproval of his request to enlarge his garden and farmyard.
-During this time, two governmental bodies, the local *Amt* and the higher state-level *Cammer*, interact and six documents
-are generated.
-
-== Difference Between the Cammer and the Amt
-
-The following explanation clarifies the roles of the *Cammer* (Kammer) and the *Amt* in the 18th–19th century administration of Schaumburg-Lippe:
-
-[glossary]
-Cammer (Kammer)::  
-The *Cammer* was the central governmental authority responsible for *fiscal administration, land management, taxation, forestry, and state property*.  
-It operated at the principality level and issued binding *Rescripte* (official decisions).  
-Its seat was typically in Bückeburg and it oversaw the activities of regional offices (Ämter).  
-In the case file concerning Jobst Heinrich Krückeberg, the Cammer was the body that made the *final decisions* on land grants.
+Jobst Heinrich Krückeberg::
+ A tenant farmer dwelling at No. 10 Berenbusch, living near a forest, who wants to enlarge his farmyard and garden.
 
 Amt::  
 The *Amt* was the *local or regional administrative office* responsible for executing the instructions of the Cammer.  
@@ -23,7 +11,13 @@ It handled *field investigations, reports, local enforcement, and petitions*, an
 The Amt had no final authority but provided the *practical groundwork* for the Cammer’s decisions.  
 In the case file, officials of the Amt Bückeburg & Arensburg surveyed land and submitted reports on Krückeberg's request.
 
-== Comparative Summary
+Cammer (Kammer)::  
+The *Cammer* was the central governmental authority responsible for *fiscal administration, land management, taxation, forestry, and state property*.  
+It operated at the principality level and issued binding *Rescripte* (official decisions).  
+Its seat was typically in Bückeburg and it oversaw the activities of regional offices (Ämter).  
+In the case file concerning Jobst Heinrich Krückeberg, the Cammer was the body that made the *final decisions* on land grants.
+
+== Comparative Summary: Amt versus Cammer
 
 [cols="1,1,2"]
 |===
