--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -17,7 +17,7 @@ It operated at the principality level and issued binding *Rescripte* (official d
 Its seat was typically in Bückeburg and it oversaw the activities of regional offices (Ämter).  
 In the case file concerning Jobst Heinrich Krückeberg, the Cammer was the body that made the *final decisions* on land grants.
 
-== Comparative Summary: Amt versus Cammer
+== Comparison: Amt versus Cammer
 
 [cols="1,1,2"]
 |===
