--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -5,6 +5,14 @@
 Jobst Heinrich Krückeberg::
  A tenant farmer dwelling at No. 10 Berenbusch, living near a forest, who wants to enlarge his farmyard and garden.
 
+Weiland of Berenbusch::
+Who expresses dissatisfaction with the planned assignment, claimed he himself wanted to acquire the same plot, and
+argued the land reassignment would restrict his access for transporting crops.
+
+Lieutenant Funck::
+A *sworn land surveyor* who will measure two parcels of ground and who suryer drawing and report will supplement
+document #4.
+
 Amt::  
 The *Amt* is where Jobst Heinrich made is request. The *Amt* was the *local or regional administrative office*
 responsible for executing the instructions of the Cammer. It handled *field investigations, reports, local
