--- a/modules/1237/pages/image2-overview.adoc
+++ b/modules/1237/pages/image2-overview.adoc
@@ -10,8 +10,9 @@ The Amt also compiled a brief Forestry Report onto the same official paper and f
 the Amt (in the upper right) to indicate the date the document was formally forwarded or submitted to the Cammer.
 
 The Cammer (also located in Bückeburg) officially registered the document on 14 June 1798 (*B. 14. Jun. 1798*),
-assigning it the internal reference number *“Cam: Nr: 662”* and marking it as *“Res Cam”*, meaning it was formally
-filed and entered into the chamber’s registry for further handling. 
+assigning it the internal reference number *“Cam: Nr: 662”* and marking it as *“Res Cam”* (short for *“Rescriptum
+Cammerale”* or *“Rescript Cammeral”*), meaning it was formally filed and entered into the chamber’s registry for
+further handling. 
 
 These labels were written in the upper-left corner by the Cammer as part of its document tracking process.  The
 one-day discrepancy between 29 May (when the petition was composed or recorded at the Amt) and 30 May (when it was
