--- a/modules/1237/pages/image3-full.adoc
+++ b/modules/1237/pages/image3-full.adoc
@@ -1,2 +1,25 @@
 = Full Document View
+:page-role: wide
+
+[cols="1a,1a",options="noheader"]
+|===
+|
+....
+Cam: Nr: 662.                       Nr: 1.
+
+Res Cam
+zum Forstamts Bericht.              praes: 30. May 1798. 
+B. 14. Jun. 1798
+            MK
+....
+|
+....
+Cam: No. 662                                        No. 1.
+Resc[riptum] Cam[merale]
+
+regarding the Forestry Office report                forwarded: 30. May 1798.
+B[ückeburg] 14. Jun. 1798
+       MK[initials of Cammer official]
+....
+|===
 
