--- a/modules/1237/pages/image3-official-reaction.adoc
+++ b/modules/1237/pages/image3-official-reaction.adoc
@@ -13,7 +13,7 @@ text of the Land Assigment Report has been erased from the imaage.
 
 image::03-right-page-left-margin-text.png[link=self]
 
-== Transliteration of Official Response to Petition and Land Assignment Report
+== Transliteration of Official Reaction to Petition and Land Assignment Report
 
 [cols="1a,1a"]
 |===
