--- a/modules/1237/pages/image3-full.adoc
+++ b/modules/1237/pages/image3-full.adoc
@@ -28,7 +28,7 @@ B[ückeburg] 14. Jun. 1798
 ....
 |===
 
-== Transliteration and Translation of Land Assignment Report
+== Land Assignment Report
 
 This is the report that accompanied the petition of Jobst Heinrich Krückeberg.
 
@@ -127,7 +127,7 @@ H. Habicht.     Stölting
 ____
 |===
 
-== Transliteration of Official Response to Petition and Land Assignment Report
+== Official Reaction to Petition and Land Assignment Report
 
 [cols="1a,1a"]
 |===
