--- a/modules/1237/pages/image3-header.adoc
+++ b/modules/1237/pages/image3-header.adoc
@@ -8,11 +8,12 @@ image::03-header.png[link=self]
 === Text on the Right Written by the Bückeburg Amt
 
 * *"2"* in the upper right (with a box drawn around it) desiginates it as doucment number 2.
-* *"pr: 6 Merz 1799"* -- *"pr:"* is short for praesentiert (presented). On March 6, 1799, document 2
-was presented (submitted or forwarded) to the *Vormundlichte Cammer*, the guardianship chamber, the higher, state-level
-authority that would render a decision.
 
 === Text on the Left Written by the Vormundliche Kammer
+
+* *"pr: 6 Merz 1799"* -- *"pr:"* is short for praesentiert (presented). On March 6, 1799, document 2
+was presented before the *Vormundlichte Cammer*, the guardianship chamber, the higher, state-level
+authority that makes binding decisions.
 
 * *"Cam: Nr:53"* -- or *"Cam[mer] No. 53"* in the upper left is an internal archiving, filing and retreival number assignment to document 2
 by the Vormundliche Cammer.
