--- a/modules/1237/pages/images9-10.adoc
+++ b/modules/1237/pages/images9-10.adoc
@@ -166,7 +166,7 @@ größerung seines Gartens u. Hof-
 Exp: per Boltesp  
 
 raums ausgewiesene Plätze, welche  
-zusam̅en w 1 Stuten 34 Ins Dec:  
+zusam̅en 21 Ruten 34 Fus Dec:  
 das Kaufgeld per Räte mit 20 4 mgl. u  
 betragen.  
 also vierzehn Rthlr 8 mg. 1 d. zu  
@@ -186,41 +186,41 @@ ____
 |
 [verse]
 ____
-(Cammer Instruction to the Chamber Treasurer)
+(Cammer directive for collecting the purchase payment)
 
-Concept Cammer: Instruction H.
+Cammer Directive: Instruction H.
 to the Chamber Steward
-Mgr Danckwerk
+Mgr. Danckwerk
 
 The Chamber Treasurer Hackmann
 is hereby instructed to collect from
-Colon Kruckeberg, No. 10 in Schirn-
-eichen, for the plots of land assigned
-to him for the enlargement of his
-garden and farmyard—
+Colon Kruckeberg No. 10, in Schirneichen,
+for the plots assigned to him for the
+enlargement of his garden and farmyard—
 
-Exp[edition] by Boltesp
+(Expedited by Bolte)
 
 —plots which together measure
-1 Stuten 34 Inches Decimal*,
-the purchase price at the rate of
-20 Groschen 4 Pfennigs per Rute,
+21 rods and 34 feet (decimal),
+a purchase price calculated at
+20 groschen and 4 pfennigs per rod,
 amounting to a total of
-fourteen Reichsthaler, 8 Groschen, 1 Pfennig—
-to be collected, entered in the
-chamber's accounts in the appropriate place,
-and justified with this directive.
+14 Reichsthaler, 8 groschen, 1 pfennig.
+
+This amount is to be collected,
+recorded in the appropriate place
+in the chamber’s accounting records,
+and this directive is to serve as
+the official justification.
 
 Bückeburg,
-27 October 1800.
+27 October 1800
 
 By order of the Count:
-          Mkaas
+         Mkaas
 Juris Danckwerk
     Wint
 
-         Wipperman
-
-
+        Wipperman
 ____
 |===
