--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -9,6 +9,12 @@ Weiland of Berenbusch::
 Who expresses dissatisfaction with the planned assignment, claimed he himself wanted to acquire the same plot, and
 argued the land reassignment would restrict his access for transporting crops.
 
+Fürstin::
+Princess, female ruler (of Schaumburg-Lippe)
+
+Graf::
+Graf is German for Count, thus the Count of Schaumburg-Lippe
+
 Lieutenant Funck::
 A *sworn land surveyor* who will measure two parcels of ground and who suryer drawing and report will supplement
 document #4.
