--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -28,6 +28,7 @@
 * xref:images9-10-overview.adoc[]
 ** xref:images9-10-full.adoc[]
 ** Breakdown: Header, 1^st^ Directive, 2^nd^ Directive
+*** TODO: Header
 *** xref:image9.adoc[]
 *** xref:image10.adoc[]
 * xref:image11-12.adoc[]
