--- a/todo.adoc
+++ b/todo.adoc
@@ -2,6 +2,7 @@
 
 * Finish this document on my own, organize it on my own.s
 * Make sure the glossaries are right for each page.
+* https://docs.antora.org/assembler/latest/ shows how to setup PDF generation
 
 == Other Activities
 
