--- a/modules/1237/pages/images9-10-full.adoc
+++ b/modules/1237/pages/images9-10-full.adoc
@@ -29,7 +29,7 @@ an die Beamte zu Buckeburg
   hiedurch ohnverhalten: daß Wir  
   die Ausweisung dieser Plätze unter  
 
-Cap: p: Bolte.  
+Cap: p: Bolte. [futher left in original] 
 
   den Euch durch Unser Rescript vom  
   11. Merz 1799, eröfneten Bedin-  
@@ -57,44 +57,47 @@ Regarding No. D: 322. F. S. [possibly S.S.]    
 Draft: Cammer directive
 To the officials in Bückeburg
 
-In the Name of the Government
-
-We hereby respond to your report dated the
-18th of this month concerning the land
-allocated to the farmer Krückeberg, No. 10 in
-Berenbusch, for the purpose of enlarging his
-farmyard and garden—specifically, a total
-area of 19 rods and 44 feet plus 1 rod and 90
-feet.
-
-This land is to be subject, starting from
-Michaelmas (29 September) of this year, to an
-annual ground rent of 2 Mariengroschen and 1
-Pfennig.
-
-We hereby confirm without reservation:
-
-That we approve the assignment of this land
-to him under the same terms and conditions
-already communicated to you in Our official
-order dated 11 March 1799, and we also
-approve the proposed annual ground rent.
-
-You are to ensure that Farmer Krückeberg
-fulfills all the conditions you have no doubt
-already made known to him.
-
-He is now required to pay the set purchase
-price at a rate of 2 Reichsthaler and 4
-Mariengroschen per rod, totaling an amount of
-14 Reichsthaler, 8 Mariengroschen, and 1
-Pfennig. This payment is to be made to Our
-revenue office.
-
-We remain, Bückeburg, 27 October 1800 on
-behalf of the Cammer
-       A. Waag
-____
+   In the Name of the Government
+   
+   We hereby respond to your report dated the
+   18th of this month concerning the land
+   allocated to the farmer Krückeberg, No. 10 in
+   Berenbusch, for the purpose of enlarging his
+   farmyard and garden—specifically, a total
+   area of 19 rods and 44 feet plus 1 rod and 90
+   feet.
+   
+   This land is to be subject, starting from
+   Michaelmas (29 September) of this year, to an
+   annual ground rent of 2 Mariengroschen and 1
+   Pfennig.
+   
+   We hereby confirm without reservation:
+   
+   That we approve the assignment of this land
+   
+Captain: p. Bolte
+   
+   to him under the same terms and conditions
+   already communicated to you in Our official
+   order dated 11 March 1799, and we also
+   approve the proposed annual ground rent.
+   
+   You are to ensure that Farmer Krückeberg
+   fulfills all the conditions you have no doubt
+   already made known to him.
+   
+   He is now required to pay the set purchase
+   price at a rate of 2 Reichsthaler and 4
+   Mariengroschen per rod, totaling an amount of
+   14 Reichsthaler, 8 Mariengroschen, and 1
+   Pfennig. This payment is to be made to Our
+   revenue office.
+   
+   We remain, Bückeburg, 27 October 1800 on
+   behalf of the Cammer
+                               A. Waag
+  ____
 |===
 
 == Cammer Anweisung (Collection Order)
