--- a/modules/1237/pages/image2-header.adoc
+++ b/modules/1237/pages/image2-header.adoc
@@ -33,7 +33,7 @@ B[ückeburg] 14. Jun. 1798
 
 * *"Nr:1"* in the upper right desiginates it as doucment number 1.
 * *"praes: 30. May 1798."* -- "praes:" is short for praesentiert (presented). May 30, 1798, was the date document 1
-was forwaard to the *Vormundlichte Cammer*, the guardianship chamber, a higher, state-level authority.
+was forwarded to the *Vormundlichte Cammer*, the guardianship chamber, a higher, state-level authority.
 +
 In smaller German principalities like Schaumburg-Lippe, the *Vormundschaftliche Cammer* typically functioned as a
 kind of higher-level civil authority—combining:
