--- a/modules/1237/pages/image2-full.adoc
+++ b/modules/1237/pages/image2-full.adoc
@@ -15,6 +15,8 @@ It is the smaller text seen on the first page. It continues onto the backside of
 |image::03-left-page.png[algin=left,scale=25,link=self]
 |===
 
+== Petition
+
 [cols="1a,1a"]
 |===
 |Transliteration|Translation
@@ -92,28 +94,22 @@ the petition.
 |Transliteration|Translation
 
 |
-[verse]
-____
-Supplic.  
-Bückeburg d. 29t. Mai 1798.  
-Lindemann geh.  
-pro St.
-
-unterschriebner  
-Col. Krückeberg N. 10 zu Berenbusch  
-____
+....
+Supplic.
+Bückeburg d. 29t. Mai 1798.
+                                         unterschriebner
+Lindemann geh.                           Col. Krückeberg N. 10 zu Berenbusch
+pro St[atuent].
+....
 
 |
-[verse]
-____
+....
 Petition.  
-Bückeburg, May 29, 1798.  
-Lindemann, written on behalf of  
+Bückeburg, May 29, 1798.              
+                                           signed  
+Lindemann, written on behalf of            Col. Krückeberg No. 10 at Berenbusch
 by order.
-
-signed  
-Col. Krückeberg No. 10 at Berenbusch  
-____
+....                                   
 |===
 
 == Forestry Office Assessment Regarding Land Expansion
