--- a/modules/1237/pages/image2-admin-note.adoc
+++ b/modules/1237/pages/image2-admin-note.adoc
@@ -23,17 +23,15 @@ record — an internal note for filing and tracking.
 ____
 Res Cam. Brevi manu dem  
 Amts zum Berichte. B. 18°  
-
-Febr 1799    Maas
+Febr 1799    MKaas
 ____
 
 |
 [verse]
 ____
-Res Cam. Delivered by hand  
-to the office for the report. Encl. 18  
-
-Febr 1799    Maas
+Resolution of the Cammer. Delivered by hand  
+to the Amt (office) for [the purpose of] reporting.
+B[ückeburg] 18 Febr 1799    MKaas
 ____
 |===
 
