--- a/modules/1237/partials/timeline.adoc
+++ b/modules/1237/partials/timeline.adoc
@@ -27,28 +27,27 @@
 
   <div class="timeline-entry">
     <h4>29 May 1798</h4>
-    <p>Jobst Heinrcih Krückeberg requests to expand his farmyard and garden.</p>
+    <p>On or before May 29, 1798, Jobst Heinrcih Krückeberg appears before the Amt in Bückeburg.</p>
+  </div>
+
+  <div class="timeline-entry">
+    <h4>29 May 1798</h4>
+    <p>Lindemann (Amt official) writes the petition on Krückeberg's behalf.</p>
   </div>
 
   <div class="timeline-entry">
     <h4>30 May 1798</h4>
-    <p>Petition and attached documents formally presented (submitted, forwarded) by local-government officials to the
-decision-making, state-level Cammer. Both are in Bückeburg.</p>
+    <p>The petition is presented (praes.) to the Vormundschaftliche Cammer.</p>
   </div>
 
   <div class="timeline-entry">
     <h4>14 June 1798</h4>
-    <p>Cammer logs the Forestry Office report, document §1, as Cam: Nr. 662.</p>
-  </div>
-
-  <div class="timeline-entry">
-    <h4>May–June 1798</h4>
-    <p>Forstamt Officer Maas issues report approving the land assignment with tree replacement conditions</p>
-  </div>
+    <p>"MKaas" of the Forstamt (Forestry Office) writes a favorable forestry assessment at the Cammer's request.</p>
+  </div
 
   <div class="timeline-entry">
     <h4>18 February 1799</h4>
-    <p>Administrative marginal note: file reactivated, Cammer sends matter to the Amt "brevi manu" for report</p>
+    <p>MKaas adds an administrative note: document was hand-delivered (brevi manu) to the Amt for further processing.</p>
   </div>
 
   <div class="timeline-entry">
